--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -164,9 +164,8 @@
         }
 
         .eunin-footer .partnership-icon {
-            height: 20px;
+            height: 24px;
             width: auto;
-            filter: brightness(0) invert(1);
         }
 
         .eunin-footer .footer-bottom {
@@ -347,7 +346,7 @@
 
                     <div class="partnership-link">
                         <a href="https://www.jjk-biz.com/" target="_blank" rel="noopener noreferrer">
-                            <img src="https://www.jjk-biz.com/wp-content/uploads/2023/05/n_ci_white_001.svg" alt="JJK" class="partnership-icon">
+                            <img src="jjk-logo.png" alt="JJK" class="partnership-icon">
                             <span>JJK 업무협약 | 은인자금파트너스</span>
                         </a>
                     </div>
