--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -346,7 +346,7 @@
 
                     <div class="partnership-link">
                         <a href="https://www.jjk-biz.com/" target="_blank" rel="noopener noreferrer">
-                            <img src="jjk-logo.png" alt="JJK" class="partnership-icon">
+                            <img src="https://pub-bd44605b27cf4ee4be42d63d7008040e.r2.dev/assets/jjk-logo.png" alt="JJK" class="partnership-icon">
                             <span>JJK 업무협약 | 은인자금파트너스</span>
                         </a>
                     </div>
